Add shape examples