@@ -1,22 +1,34 @@
-plugins {
-    id 'java'
-}
-
 group 'com.cleancode'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+subprojects {
+    apply plugin: 'java-library'
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
-    testImplementation 'org.assertj:assertj-core:3.21.0'
+    repositories {
+        mavenCentral()
+    }
 
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    dependencies {
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+        testImplementation 'org.assertj:assertj-core:3.21.0'
 
-}
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 
-test {
-    useJUnitPlatform()
+    }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += ['--enable-preview']
+    }
+
+    test {
+        useJUnitPlatform()
+        jvmArgs += ['--enable-preview']
+    }
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
+    }
+
 }
